Fix to align attributes

--- a/src/client/styles/components/SubjectHeadings.scss
+++ b/src/client/styles/components/SubjectHeadings.scss
@@ -2,7 +2,6 @@
   width: 100%;
   min-width: 100%;
   min-height: 1px;
-
 }
 
 .subjectHeadingMainContent .subjectHeadingRow {
@@ -49,7 +48,19 @@ a {
 }
 
 .subjectHeadingRow.openSubjectHeading {
-  background: lightgrey;
+  background: #E8E4E3;
+}
+
+.subjectHeadingRow.openSubjectHeading {
+  > .subjectHeadingLabelAndToggle {
+    background: lightgrey;
+  }
+  > .subjectHeadingToggle {
+    background: lightgrey;
+  }
+  > .subjectHeadingAttribute {
+    background: lightgrey;
+  }
 }
 
 .subjectHeadingRow span {
@@ -63,14 +74,23 @@ a {
 
 .subjectHeadingLabelAndToggle {
   list-style: none;
-  margin-left: 15px;
+  // margin-left: 15px;
   font-weight: 500;
   width: 65%;
+  position: sticky;
+
+  .subjectHeadingLabel {
+    word-wrap: break-word;
+    cursor: pointer;
+    position: relative;
+    // top: 0;
+  }
+
 }
 
-.subjectHeadingLabelAndToggle > .subjectHeadingLabel {
-  word-wrap: break-word;
-  cursor: pointer;
+.subjectHeadingToggle {
+  position: relative;
+  // top: 0;
 }
 
 .subjectHeadingRow > .subjectHeadingAttribute {
@@ -127,10 +147,10 @@ a {
 .nestedSubjectHeading {
   background-color: #E8E4E3;
 
-  span.subjectHeadingToggle {
-    padding-right: 2%;
-    margin-left: -2%;
-  }
+  // span.subjectHeadingToggle {
+  //   padding-right: 2%;
+  //   margin-left: -2%;
+  // }
 }
 
 .subjectHeadingMainContent {
@@ -174,7 +194,10 @@ a {
   width: 80%;
 }
 
-.subjectHeadingList {font-size: 0;}
+.subjectHeadingList {
+  font-size: 0;
+  padding-left: 0px;
+}
 
 .subjectHeadingList li {
   margin-bottom: .5rem;
@@ -184,9 +207,9 @@ a {
     margin-left: 12%;
     max-width: 760px;
 
-    a {
-      padding: 0% 1%;
-    }
+    // a {
+    //   padding: 0% 1%;
+    // }
 
     & > ul {
       -webkit-columns: 2;
@@ -212,7 +235,7 @@ a {
 
 .nestedSubjectHeadingList {
   background-color: #E8E4E3;
-  padding-left: 20px;
+  // padding-left: 20px;
 
   li {
     margin-bottom: 0;
